--- a/cart.html
+++ b/cart.html
@@ -138,7 +138,7 @@
   </div>
   
   <div class="logo">
-    <img src="images/eternity_files/logo.jpg" alt="Logo" width="100" height="100">
+    <img src="logo.jpg" alt="Logo" width="100" height="100">
   </div>
   
   <h1>Shopping Cart</h1>
