--- a/confirmation.html
+++ b/confirmation.html
@@ -67,7 +67,7 @@
 <body>
     <h1>Order Confirmation</h1>
     <div class="logo">
-        <img src="images/eternity_files/logo.jpg" alt="Logo">
+        <img src="logo.jpg" alt="Logo">
     </div>
     <p>Thank you for your order! Your order has been confirmed.</p>
     <!-- Add any additional details or information here -->
